// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header when logged in matches the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    user={
        Object {
            "name": "me",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h1>
          Movie Tracker
</h1>,
        <div
          className="nav"
>
          <div
                    className="welcome"
          >
                    <h3>
                              Welcome 
                              me
                    </h3>
          </div>
          <div
                    className="nav-link-wrapper"
          >
                    <NavLink
                              activeClassName="active"
                              ariaCurrent="true"
                              exact={true}
                              to="/"
                    >
                              Movies
                    </NavLink>
          </div>
          <div
                    className="nav-link-wrapper"
          >
                    <NavLink
                              activeClassName="active"
                              ariaCurrent="true"
                              onClick={[Function]}
                              to="/login"
                    >
                              Logout
                    </NavLink>
          </div>
          <div
                    className="nav-link-wrapper"
          >
                    <NavLink
                              activeClassName="active"
                              ariaCurrent="true"
                              to="/favorites"
                    >
                              Favorites
                    </NavLink>
          </div>
</div>,
        <h2 />,
      ],
      "className": "header",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Movie Tracker",
        },
        "ref": null,
        "rendered": "Movie Tracker",
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="welcome"
>
              <h3>
                            Welcome 
                            me
              </h3>
</div>,
            <div
              className="nav-link-wrapper"
>
              <NavLink
                            activeClassName="active"
                            ariaCurrent="true"
                            exact={true}
                            to="/"
              >
                            Movies
              </NavLink>
</div>,
            <div
              className="nav-link-wrapper"
>
              <NavLink
                            activeClassName="active"
                            ariaCurrent="true"
                            onClick={[Function]}
                            to="/login"
              >
                            Logout
              </NavLink>
</div>,
            <div
              className="nav-link-wrapper"
>
              <NavLink
                            activeClassName="active"
                            ariaCurrent="true"
                            to="/favorites"
              >
                            Favorites
              </NavLink>
</div>,
          ],
          "className": "nav",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <h3>
                Welcome 
                me
</h3>,
              "className": "welcome",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "Welcome ",
                  "me",
                ],
              },
              "ref": null,
              "rendered": Array [
                "Welcome ",
                "me",
              ],
              "type": "h3",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <NavLink
                activeClassName="active"
                ariaCurrent="true"
                exact={true}
                to="/"
>
                Movies
</NavLink>,
              "className": "nav-link-wrapper",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "activeClassName": "active",
                "ariaCurrent": "true",
                "children": "Movies",
                "exact": true,
                "to": "/",
              },
              "ref": null,
              "rendered": "Movies",
              "type": [Function],
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <NavLink
                activeClassName="active"
                ariaCurrent="true"
                onClick={[Function]}
                to="/login"
>
                Logout
</NavLink>,
              "className": "nav-link-wrapper",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "activeClassName": "active",
                "ariaCurrent": "true",
                "children": "Logout",
                "onClick": [Function],
                "to": "/login",
              },
              "ref": null,
              "rendered": "Logout",
              "type": [Function],
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <NavLink
                activeClassName="active"
                ariaCurrent="true"
                to="/favorites"
>
                Favorites
</NavLink>,
              "className": "nav-link-wrapper",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "activeClassName": "active",
                "ariaCurrent": "true",
                "children": "Favorites",
                "to": "/favorites",
              },
              "ref": null,
              "rendered": "Favorites",
              "type": [Function],
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": "h2",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1>
            Movie Tracker
</h1>,
          <div
            className="nav"
>
            <div
                        className="welcome"
            >
                        <h3>
                                    Welcome 
                                    me
                        </h3>
            </div>
            <div
                        className="nav-link-wrapper"
            >
                        <NavLink
                                    activeClassName="active"
                                    ariaCurrent="true"
                                    exact={true}
                                    to="/"
                        >
                                    Movies
                        </NavLink>
            </div>
            <div
                        className="nav-link-wrapper"
            >
                        <NavLink
                                    activeClassName="active"
                                    ariaCurrent="true"
                                    onClick={[Function]}
                                    to="/login"
                        >
                                    Logout
                        </NavLink>
            </div>
            <div
                        className="nav-link-wrapper"
            >
                        <NavLink
                                    activeClassName="active"
                                    ariaCurrent="true"
                                    to="/favorites"
                        >
                                    Favorites
                        </NavLink>
            </div>
</div>,
          <h2 />,
        ],
        "className": "header",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Movie Tracker",
          },
          "ref": null,
          "rendered": "Movie Tracker",
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="welcome"
>
                <h3>
                                Welcome 
                                me
                </h3>
</div>,
              <div
                className="nav-link-wrapper"
>
                <NavLink
                                activeClassName="active"
                                ariaCurrent="true"
                                exact={true}
                                to="/"
                >
                                Movies
                </NavLink>
</div>,
              <div
                className="nav-link-wrapper"
>
                <NavLink
                                activeClassName="active"
                                ariaCurrent="true"
                                onClick={[Function]}
                                to="/login"
                >
                                Logout
                </NavLink>
</div>,
              <div
                className="nav-link-wrapper"
>
                <NavLink
                                activeClassName="active"
                                ariaCurrent="true"
                                to="/favorites"
                >
                                Favorites
                </NavLink>
</div>,
            ],
            "className": "nav",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <h3>
                  Welcome 
                  me
</h3>,
                "className": "welcome",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Welcome ",
                    "me",
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "Welcome ",
                  "me",
                ],
                "type": "h3",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <NavLink
                  activeClassName="active"
                  ariaCurrent="true"
                  exact={true}
                  to="/"
>
                  Movies
</NavLink>,
                "className": "nav-link-wrapper",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "activeClassName": "active",
                  "ariaCurrent": "true",
                  "children": "Movies",
                  "exact": true,
                  "to": "/",
                },
                "ref": null,
                "rendered": "Movies",
                "type": [Function],
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <NavLink
                  activeClassName="active"
                  ariaCurrent="true"
                  onClick={[Function]}
                  to="/login"
>
                  Logout
</NavLink>,
                "className": "nav-link-wrapper",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "activeClassName": "active",
                  "ariaCurrent": "true",
                  "children": "Logout",
                  "onClick": [Function],
                  "to": "/login",
                },
                "ref": null,
                "rendered": "Logout",
                "type": [Function],
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <NavLink
                  activeClassName="active"
                  ariaCurrent="true"
                  to="/favorites"
>
                  Favorites
</NavLink>,
                "className": "nav-link-wrapper",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "activeClassName": "active",
                  "ariaCurrent": "true",
                  "children": "Favorites",
                  "to": "/favorites",
                },
                "ref": null,
                "rendered": "Favorites",
                "type": [Function],
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": "h2",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Header when logged out matches the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    user={Object {}}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h1>
          Movie Tracker
</h1>,
        <div
          className="nav"
>
          <div
                    className="welcome"
          >
                    <h3>
                              You are logged out.
                    </h3>
          </div>
          <div
                    className="nav-link-wrapper"
          >
                    <NavLink
                              activeClassName="active"
                              ariaCurrent="true"
                              exact={true}
                              to="/"
                    >
                              Movies
                    </NavLink>
          </div>
          <div
                    className="nav-link-wrapper"
          >
                    <NavLink
                              activeClassName="active"
                              ariaCurrent="true"
                              to="/login"
                    >
                              Login
                    </NavLink>
          </div>
          <div
                    className="nav-link-wrapper"
          >
                    <NavLink
                              activeClassName="active"
                              ariaCurrent="true"
                              to="/signup"
                    >
                              Sign Up
                    </NavLink>
          </div>
</div>,
        <h2 />,
      ],
      "className": "header",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Movie Tracker",
        },
        "ref": null,
        "rendered": "Movie Tracker",
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="welcome"
>
              <h3>
                            You are logged out.
              </h3>
</div>,
            <div
              className="nav-link-wrapper"
>
              <NavLink
                            activeClassName="active"
                            ariaCurrent="true"
                            exact={true}
                            to="/"
              >
                            Movies
              </NavLink>
</div>,
            <div
              className="nav-link-wrapper"
>
              <NavLink
                            activeClassName="active"
                            ariaCurrent="true"
                            to="/login"
              >
                            Login
              </NavLink>
</div>,
            <div
              className="nav-link-wrapper"
>
              <NavLink
                            activeClassName="active"
                            ariaCurrent="true"
                            to="/signup"
              >
                            Sign Up
              </NavLink>
</div>,
          ],
          "className": "nav",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <h3>
                You are logged out.
</h3>,
              "className": "welcome",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "You are logged out.",
              },
              "ref": null,
              "rendered": "You are logged out.",
              "type": "h3",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <NavLink
                activeClassName="active"
                ariaCurrent="true"
                exact={true}
                to="/"
>
                Movies
</NavLink>,
              "className": "nav-link-wrapper",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "activeClassName": "active",
                "ariaCurrent": "true",
                "children": "Movies",
                "exact": true,
                "to": "/",
              },
              "ref": null,
              "rendered": "Movies",
              "type": [Function],
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <NavLink
                activeClassName="active"
                ariaCurrent="true"
                to="/login"
>
                Login
</NavLink>,
              "className": "nav-link-wrapper",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "activeClassName": "active",
                "ariaCurrent": "true",
                "children": "Login",
                "to": "/login",
              },
              "ref": null,
              "rendered": "Login",
              "type": [Function],
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <NavLink
                activeClassName="active"
                ariaCurrent="true"
                to="/signup"
>
                Sign Up
</NavLink>,
              "className": "nav-link-wrapper",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "activeClassName": "active",
                "ariaCurrent": "true",
                "children": "Sign Up",
                "to": "/signup",
              },
              "ref": null,
              "rendered": "Sign Up",
              "type": [Function],
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": "h2",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1>
            Movie Tracker
</h1>,
          <div
            className="nav"
>
            <div
                        className="welcome"
            >
                        <h3>
                                    You are logged out.
                        </h3>
            </div>
            <div
                        className="nav-link-wrapper"
            >
                        <NavLink
                                    activeClassName="active"
                                    ariaCurrent="true"
                                    exact={true}
                                    to="/"
                        >
                                    Movies
                        </NavLink>
            </div>
            <div
                        className="nav-link-wrapper"
            >
                        <NavLink
                                    activeClassName="active"
                                    ariaCurrent="true"
                                    to="/login"
                        >
                                    Login
                        </NavLink>
            </div>
            <div
                        className="nav-link-wrapper"
            >
                        <NavLink
                                    activeClassName="active"
                                    ariaCurrent="true"
                                    to="/signup"
                        >
                                    Sign Up
                        </NavLink>
            </div>
</div>,
          <h2 />,
        ],
        "className": "header",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Movie Tracker",
          },
          "ref": null,
          "rendered": "Movie Tracker",
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="welcome"
>
                <h3>
                                You are logged out.
                </h3>
</div>,
              <div
                className="nav-link-wrapper"
>
                <NavLink
                                activeClassName="active"
                                ariaCurrent="true"
                                exact={true}
                                to="/"
                >
                                Movies
                </NavLink>
</div>,
              <div
                className="nav-link-wrapper"
>
                <NavLink
                                activeClassName="active"
                                ariaCurrent="true"
                                to="/login"
                >
                                Login
                </NavLink>
</div>,
              <div
                className="nav-link-wrapper"
>
                <NavLink
                                activeClassName="active"
                                ariaCurrent="true"
                                to="/signup"
                >
                                Sign Up
                </NavLink>
</div>,
            ],
            "className": "nav",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <h3>
                  You are logged out.
</h3>,
                "className": "welcome",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "You are logged out.",
                },
                "ref": null,
                "rendered": "You are logged out.",
                "type": "h3",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <NavLink
                  activeClassName="active"
                  ariaCurrent="true"
                  exact={true}
                  to="/"
>
                  Movies
</NavLink>,
                "className": "nav-link-wrapper",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "activeClassName": "active",
                  "ariaCurrent": "true",
                  "children": "Movies",
                  "exact": true,
                  "to": "/",
                },
                "ref": null,
                "rendered": "Movies",
                "type": [Function],
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <NavLink
                  activeClassName="active"
                  ariaCurrent="true"
                  to="/login"
>
                  Login
</NavLink>,
                "className": "nav-link-wrapper",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "activeClassName": "active",
                  "ariaCurrent": "true",
                  "children": "Login",
                  "to": "/login",
                },
                "ref": null,
                "rendered": "Login",
                "type": [Function],
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <NavLink
                  activeClassName="active"
                  ariaCurrent="true"
                  to="/signup"
>
                  Sign Up
</NavLink>,
                "className": "nav-link-wrapper",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "activeClassName": "active",
                  "ariaCurrent": "true",
                  "children": "Sign Up",
                  "to": "/signup",
                },
                "ref": null,
                "rendered": "Sign Up",
                "type": [Function],
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": "h2",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
